ingress/ingress-nginx-aws.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
