ingress/ingress-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  type: NodePort
  selector:
    app: ingress-nginx
  ports:
    - port: 8083
      targetPort: 59437
      protocol: TCP
      name: tcp-testport
