ingress/mapleapi-web-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["96.99.197.253"],"port":443,"protocol":"TCP","serviceName":"maple-dev:mapleapi-web","allNodes":false}]'
  labels:
    run: mapleapi-web
  name: mapleapi-web
  namespace: maple-dev
spec:
  clusterIP: 10.43.30.157
  externalTrafficPolicy: Cluster
  ports:
  - name: https
    nodePort: 31899
    port: 443
    protocol: TCP
  selector:
    app: mapleapi-web
  sessionAffinity: None
  type: LoadBalancer
