ingress/helloworld-rancher-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld2-rancher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld2-rancher
  template:
    metadata:
      labels:
        app: helloworld2-rancher
    spec:
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo:v2
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld2-rancher
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: helloworld2-rancher
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld2-rancher-rules
  annotations:
    cert-manager.io/issuer: "selfsigned-issuer" 
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: k8s-sandbox.prod.comcast.net
    http:
      paths:
      - path: /*
        backend:
          serviceName: helloworld-rancher
          servicePort: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - k8s-sandbox.prod.comcast.net
    secretName: sandbox-helloworld-cert
