ingress/helloworld-rancher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-rancher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-rancher
  template:
    metadata:
      labels:
        app: helloworld-rancher
    spec:
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo:latest
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-rancher
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: helloworld-rancher
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rancher-rules
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: helloworld-rancher-default.example.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: helloworld-rancher
          servicePort: 80
